<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clear_day_sky"
    android:textAlignment="center"
    tools:context=".MainActivity"
    tools:ignore="DuplicateIds">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="90dp"
        android:layout_height="101dp"
        android:layout_marginEnd="175dp"
        android:contentDescription="@string/weatherImage"
        app:layout_constraintBottom_toBottomOf="@+id/temperature"
        app:layout_constraintEnd_toEndOf="@+id/temperature"
        app:layout_constraintStart_toStartOf="@+id/temperature"
        app:layout_constraintTop_toBottomOf="@+id/weather"
        app:srcCompat="@drawable/sun_real" />


    <Button
        android:id="@+id/cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/cancel"
        android:textColor="@color/darkRed"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/add"
        android:textColor="@color/darkRed"
        android:textSize="@dimen/button_text_size"
        app:icon="@drawable/ic_add_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textAlignment="center"
        android:textColor="#191313"
        android:textColorHighlight="#5C0202"
        android:textColorHint="@color/colorPrimaryDark"
        android:textColorLink="#673AB7"
        android:textIsSelectable="false"
        android:textSize="@dimen/header"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/cancel"
        tools:layout_editor_absoluteX="10dp" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textIsSelectable="false"
        android:textSize="@dimen/regular"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperatureMain"
        android:textAlignment="center"
        android:textColor="#050505"
        android:textIsSelectable="false"
        android:textSize="@dimen/main_text"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/weather" />

    <TextView
        android:id="@+id/tempRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tempRange"
        android:textAlignment="center"
        android:textColor="#070707"
        android:textIsSelectable="false"
        android:textSize="@dimen/regular"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <TextView
        android:id="@+id/warnings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/alert_block_margins"
        android:text="@string/warnings"
        android:textColor="#420101"
        android:textIsSelectable="true"
        android:textSize="@dimen/regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempRange" />

</androidx.constraintlayout.widget.ConstraintLayout>